# ExploringDataLakes

./: .gitignore  DEPLOYMENT.md  docker-compose.yml  dump.rdb
backend/: .dockerignore  Dockerfile  README.md  dockerfile  logging.txt  pyproject.toml
backend/app/: Database.py  __init__.py  app.py  helper.py
backend/app/ERD_automation/: attribute.py  foreignKeyfilters.py  ind.py  primary_key_extraction.py  spider.py
backend/app/compartmentalization/clustering/: HDBScan.py  clusteror.py
backend/app/compartmentalization/clustering/clusteror/: HDBScan.py  Raptor.py  clusteror.py
backend/app/compartmentalization/clustering/clusterors/: HDBScan.py  Raptor.py  clusteror.py
backend/app/compartmentalization/clustering/encoder/: encoder.py  sentence_transformer.py
backend/app/compartmentalization/clustering/encoders/: sentence_transformer.py
backend/app/compartmentalization/clusterors/: HDBScan.py  Raptor.py  clusteror.py
backend/app/compartmentalization/descriptionGeneration/: prompt.py
backend/app/compartmentalization/encoders/: encoder.py  sentence_transformer.py
backend/app/descriptionGeneration/: descriptionGeneration.py  prompt.py
backend/test/: test_database.py  test_descriptionGeneration.py  util.py
backend/test/compartmentalization/clustering/: test_clusteror.py
backend/test/test_ERD_automation/: test_filter.py  test_primary_key.py  test_spider.py
backend/test/test_compartmentalization/: test_compartmentalization.py
backend/test/test_compartmentalization/test_clustering/: northwind_descriptions.json  test_clusteror.py
backend/test/test_descriptionGeneration/: test_descriptionGeneration.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: erd_visualizer.py  main.py  util.py
