[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Haseeb Muhammad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = "^0.29.0"
pandas = "^2.3.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
