[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Haseeb Muhammad"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.110"
uvicorn = "^0.29.0"
pandas = "^2.3.1"
python-multipart = "^0.0.20"
numpy = "^2.3.2"
sentence-transformers = "^5.1.0"
hdbscan = "^0.8.40"
umap = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
