[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Haseeb Muhammad"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.110"
uvicorn = "^0.29.0"
pandas = "^2.3.1"
python-multipart = "^0.0.20"
numpy = "2.0.2"
sentence-transformers = "^5.1.0"
hdbscan = "^0.8.40"
umap-learn = "^0.5.6"
openai = "^1.99.5"
numba = "^0.60.0"
llvmlite = "^0.43.0"
redis = {extras = ["hiredis"], version = "^6.4.0"}
datasketch = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
