[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Haseeb Muhammad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35"
requests = "^2.31"
pandas = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
